# web_frame

./: 2  Cargo.toml  README.md
html/: 404.html  hello.html  post.html  press.html  redis.html  sql.html
layui/: README.md  test.html
src/: lib.rs  main.rs  preload.rs
src/hyper_manager/: mod.rs  request_handler.rs  server.rs
src/middleware_manager/: mod.rs  mw_get.rs  mw_post.rs  mw_queue.rs  mw_redis.rs  mw_sql.rs
src/route_manager/: mod.rs  route.rs
src/template_rendering_manager/: example_view.rs  mod.rs  simple_view.rs
