[package]
name = "frame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "1", features = ["full"]}
tokio = {version = "1", features = ["full"]}
http-body-util = "0.1"
hyper-util = {version = "0.1", features = ["full"]}
futures = "0.3.30"
serde_json = "1.0.113"
mini-redis = "0.4"

